unpackaged/main/default/objects/Request_Forms__c/Request_Forms__c.object-meta.xml
<CustomObject>
    <label>Marketing Project Request</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Project Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>