unpackaged/main/default/objects/Request_Forms__c/fields/Actual_Completed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completed__c</fullName>
    <label>Actual Completed</label>
    <type>Date</type>
</CustomField>