unpackaged/main/default/objects/Request_Forms__c/fields/Additional_Direction_or_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Additional_Direction_or_Constraints__c</fullName>
    <label>Additional Direction or Constraints</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>