unpackaged/main/default/objects/Request_Forms__c/fields/Bid_List_hrs__c.field-meta.xml
<CustomField>
    <fullName>Bid_List_hrs__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Used for the Direct Mail Project Logistics Stage</description>
    <label>Bid List (hrs)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>