unpackaged/main/default/objects/Request_Forms__c/fields/Bid_Package_hrs__c.field-meta.xml
<CustomField>
    <fullName>Bid_Package_hrs__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>Bid Package (hrs)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>