unpackaged/main/default/objects/Request_Forms__c/fields/Briefly_Describe_Process_to_Integrate__c.field-meta.xml
<CustomField>
    <fullName>Briefly_Describe_Process_to_Integrate__c</fullName>
    <inlineHelpText>Please summarize the process that you would like to automate in Salesforce.</inlineHelpText>
    <label>Briefly Describe Process to Integrate</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>