unpackaged/main/default/objects/Request_Forms__c/fields/Business_Time_Off_Details__c.field-meta.xml
<CustomField>
    <fullName>Business_Time_Off_Details__c</fullName>
    <label>Business Time Off Details</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>