unpackaged/main/default/objects/Request_Forms__c/fields/Call_to_Action__c.field-meta.xml
<CustomField>
    <fullName>Call_to_Action__c</fullName>
    <label>Call to Action</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>