unpackaged/main/default/objects/Request_Forms__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Campaign.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Marketing Project Requests (Campaign)</relationshipLabel>
    <relationshipName>Request_Form</relationshipName>
    <type>Lookup</type>
</CustomField>