unpackaged/main/default/objects/Request_Forms__c/fields/Campaign_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Tactic__c</fullName>
    <label>Campaign Tactic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Campaign_Tactic</valueSetName>
    </valueSet>
</CustomField>