unpackaged/main/default/objects/Request_Forms__c/fields/Client_Approval_hrs__c.field-meta.xml
<CustomField>
    <fullName>Client_Approval_hrs__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>Client Approval (hrs)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>