unpackaged/main/default/objects/Request_Forms__c/fields/Core_Service__c.field-meta.xml
<CustomField>
    <fullName>Core_Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup field that filters selection to the Core Services Global Picklist</description>
    <inlineHelpText>NCM Business Unit this Request Supports</inlineHelpText>
    <label>Core Service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Core_Service_Record,General_Advertising,Tradeshow</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Marketing Project Requests (Core Service)</relationshipLabel>
    <relationshipName>Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>