unpackaged/main/default/objects/Request_Forms__c/fields/Course_Date_s__c.field-meta.xml
<CustomField>
    <fullName>Course_Date_s__c</fullName>
    <label>Course Date(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>