unpackaged/main/default/objects/Request_Forms__c/fields/Course_Location__c.field-meta.xml
<CustomField>
    <fullName>Course_Location__c</fullName>
    <label>Course Location</label>
    <type>TextArea</type>
</CustomField>