unpackaged/main/default/objects/Request_Forms__c/fields/Course_Website__c.field-meta.xml
<CustomField>
    <fullName>Course_Website__c</fullName>
    <label>Course Website</label>
    <type>TextArea</type>
</CustomField>