unpackaged/main/default/objects/Request_Forms__c/fields/Current_Applications_Used_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Applications_Used_in_Process__c</fullName>
    <inlineHelpText>Please list any applications that you&#39;re currently using to accomplish this business process.</inlineHelpText>
    <label>Current Applications Used in Process</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>