unpackaged/main/default/objects/Request_Forms__c/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <label>Date: From</label>
    <type>Date</type>
</CustomField>