unpackaged/main/default/objects/Request_Forms__c/fields/Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>Date_Thru__c</fullName>
    <label>Date: Thru</label>
    <type>Date</type>
</CustomField>