unpackaged/main/default/objects/Request_Forms__c/fields/Days_Unchecked__c.field-meta.xml
<CustomField>
    <fullName>Days_Unchecked__c</fullName>
    <description>Used as part of formula to determine if the request has been &quot;checked&quot; by marketing and how many days since. NOT expected to be visible - helps to drive dashboards/reporting based on filters and criteria - this is NOT a standalone value.</description>
    <formula>TODAY() -  datevalue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Unchecked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>