unpackaged/main/default/objects/Request_Forms__c/fields/Describe_Application_to_Integrate__c.field-meta.xml
<CustomField>
    <fullName>Describe_Application_to_Integrate__c</fullName>
    <label>Describe Application to Integrate</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>