unpackaged/main/default/objects/Request_Forms__c/fields/Engagements_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Engagements_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagements Checklist</label>
    <referenceTo>Engagements_Checklist__c</referenceTo>
    <relationshipLabel>Marketing Project Requests</relationshipLabel>
    <relationshipName>Marketing_Project_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>