unpackaged/main/default/objects/Request_Forms__c/fields/Exclude_from_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Campaign__c</fullName>
    <inlineHelpText>Please list the prospects or client attributes that you would like to exclude from the communication. Ex: Specific 20 Group Numbers, Titles, axcessa clients</inlineHelpText>
    <label>Exclude from Campaign</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>