unpackaged/main/default/objects/Request_Forms__c/fields/Feature_added_to_Object__c.field-meta.xml
<CustomField>
    <fullName>Feature_added_to_Object__c</fullName>
    <label>Feature added to Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20 Groups</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Request Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>