unpackaged/main/default/objects/Request_Forms__c/fields/Feature_Description__c.field-meta.xml
<CustomField>
    <fullName>Feature_Description__c</fullName>
    <inlineHelpText>Please explain in detail the additional functionality that you would like added to our Salesforce instance.</inlineHelpText>
    <label>Feature Description</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>