unpackaged/main/default/objects/Request_Forms__c/fields/Full_Day__c.field-meta.xml
<CustomField>
    <fullName>Full_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Day</label>
    <type>Checkbox</type>
</CustomField>