unpackaged/main/default/objects/Request_Forms__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Id</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipName>Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>