unpackaged/main/default/objects/Request_Forms__c/fields/If_Approved__c.field-meta.xml
<CustomField>
    <fullName>If_Approved__c</fullName>
    <label>If Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Need HR to register me</fullName>
            </value>
            <value>
                <fullName>Will register on my own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>