unpackaged/main/default/objects/Request_Forms__c/fields/Key_Campaign_Message__c.field-meta.xml
<CustomField>
    <fullName>Key_Campaign_Message__c</fullName>
    <inlineHelpText>The main points to be conveyed in the piece. The primary features of the program, service, event. The benefits that the features will bring to the audience.</inlineHelpText>
    <label>Key Campaign Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>