unpackaged/main/default/objects/Request_Forms__c/fields/Main_message_and_supporting_points__c.field-meta.xml
<CustomField>
    <fullName>Main_message_and_supporting_points__c</fullName>
    <inlineHelpText>What does this project need to convey? What are the mandatory reasons to believe?</inlineHelpText>
    <label>Main message and supporting points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>