unpackaged/main/default/objects/Request_Forms__c/fields/Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manager_Comments__c</fullName>
    <label>Manager Comments</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>