unpackaged/main/default/objects/Request_Forms__c/fields/Marketing_List_include_and_or_exclude__c.field-meta.xml
<CustomField>
    <fullName>Marketing_List_include_and_or_exclude__c</fullName>
    <inlineHelpText>Please enter the criteria for the target audience for this marketing list</inlineHelpText>
    <label>Marketing: List (include and/or exclude)</label>
    <type>TextArea</type>
</CustomField>