unpackaged/main/default/objects/Request_Forms__c/fields/Marketing_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Request_Number__c</fullName>
    <displayFormat>Marketing-{00000}</displayFormat>
    <label>Marketing Request Number</label>
    <type>AutoNumber</type>
</CustomField>