unpackaged/main/default/objects/Request_Forms__c/fields/Marketing_Type_of_List__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Type_of_List__c</fullName>
    <label>Marketing:Type of List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Email / Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>