unpackaged/main/default/objects/Request_Forms__c/fields/Marketing_Year__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Year__c</fullName>
    <defaultValue>&quot;2020&quot;</defaultValue>
    <label>Marketing Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>