unpackaged/main/default/objects/Request_Forms__c/fields/MarketingRequestID_18__c.field-meta.xml
<CustomField>
    <fullName>MarketingRequestID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MarketingRequestID (18)</label>
    <type>Text</type>
</CustomField>