unpackaged/main/default/objects/Request_Forms__c/fields/NCM_Institute__c.field-meta.xml
<CustomField>
    <fullName>NCM_Institute__c</fullName>
    <label>% NCM Institute</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>