unpackaged/main/default/objects/Request_Forms__c/fields/NCM_Services_Supported__c.field-meta.xml
<CustomField>
    <fullName>NCM_Services_Supported__c</fullName>
    <label>NCM Service(s) Supported</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Business_Unit</valueSetName>
    </valueSet>
</CustomField>