unpackaged/main/default/objects/Request_Forms__c/fields/New_Feature_Request_Other_Explanation__c.field-meta.xml
<CustomField>
    <fullName>New_Feature_Request_Other_Explanation__c</fullName>
    <label>New Feature Request - Other Explanation</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>