unpackaged/main/default/objects/Request_Forms__c/fields/New_Feature_Requested__c.field-meta.xml
<CustomField>
    <fullName>New_Feature_Requested__c</fullName>
    <label>New Feature Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Text Box</fullName>
            </value>
            <value>
                <fullName>Workflow - Automatically update a field or send an email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>