unpackaged/main/default/objects/Request_Forms__c/fields/Package_Logistics_hrs__c.field-meta.xml
<CustomField>
    <fullName>Package_Logistics_hrs__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>Package Logistics (hrs)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>