unpackaged/main/default/objects/Request_Forms__c/fields/Printing_Request_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Printing_Request_Quantity__c</fullName>
    <label>Printing Request Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>