unpackaged/main/default/objects/Request_Forms__c/fields/Project_Budget_cost__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget_cost__c</fullName>
    <label>Project Budget (cost)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>