unpackaged/main/default/objects/Request_Forms__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <inlineHelpText>Please give a detailed overview of the project you are requesting. Thank You.</inlineHelpText>
    <label>Request Description</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>