unpackaged/main/default/objects/Request_Forms__c/fields/Project_to_Support__c.field-meta.xml
<CustomField>
    <fullName>Project_to_Support__c</fullName>
    <label>Project to Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20 Groups</fullName>
            </value>
            <value>
                <fullName>axcessa</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Event / Tradeshow</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>LiveAudit</fullName>
            </value>
            <value>
                <fullName>NCM Institute</fullName>
            </value>
            <value>
                <fullName>NCM On-Demand</fullName>
            </value>
            <value>
                <fullName>OEM Project</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Travel Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>