unpackaged/main/default/objects/Request_Forms__c/fields/Pull_List_hrs__c.field-meta.xml
<CustomField>
    <fullName>Pull_List_hrs__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Pull List (hrs)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>