unpackaged/main/default/objects/Request_Forms__c/fields/Relevance_to_Position_or_Career_Path__c.field-meta.xml
<CustomField>
    <fullName>Relevance_to_Position_or_Career_Path__c</fullName>
    <label>Relevance to Position or Career Path</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>