unpackaged/main/default/objects/Request_Forms__c/fields/Report_Dashboard_Description__c.field-meta.xml
<CustomField>
    <fullName>Report_Dashboard_Description__c</fullName>
    <inlineHelpText>Please describe in detail the type of report or dashboard you are trying to create.</inlineHelpText>
    <label>Report &amp; Dashboard Description</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>