unpackaged/main/default/objects/Request_Forms__c/fields/Reports_Dashboard_Request__c.field-meta.xml
<CustomField>
    <fullName>Reports_Dashboard_Request__c</fullName>
    <label>Reports &amp; Dashboard Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Creating a new Report</fullName>
            </value>
            <value>
                <fullName>Finding an existing Report</fullName>
            </value>
            <value>
                <fullName>Building a new Dashboard</fullName>
            </value>
            <value>
                <fullName>Adding a new component to Dashboard</fullName>
            </value>
            <value>
                <fullName>Creating a new Report Type</fullName>
            </value>
            <value>
                <fullName>Pull a Marketing Prospect/Client List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>