unpackaged/main/default/objects/Request_Forms__c/fields/Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Name__c</fullName>
    <label>Request Name</label>
    <type>TextArea</type>
</CustomField>