unpackaged/main/default/objects/Request_Forms__c/fields/Requested_Completion_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Completion_Launch_Date__c</fullName>
    <label>Requested Completion / Launch Date</label>
    <type>Date</type>
</CustomField>