unpackaged/main/default/objects/Request_Forms__c/fields/Requestor_Forms__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Forms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>