unpackaged/main/default/objects/Request_Forms__c/fields/Salesforce_Level_of_Access__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Level_of_Access__c</fullName>
    <label>Salesforce Level of Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free License</fullName>
            </value>
            <value>
                <fullName>Full License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>