unpackaged/main/default/objects/Request_Forms__c/fields/Salesforce_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Request_Number__c</fullName>
    <displayFormat>Salesforce-{0000}</displayFormat>
    <label>Salesforce Request Number</label>
    <type>AutoNumber</type>
</CustomField>