unpackaged/main/default/objects/Request_Forms__c/fields/Salesforce_Training_Request__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Training_Request__c</fullName>
    <label>Salesforce Training Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New User Training</fullName>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>