unpackaged/main/default/objects/Request_Forms__c/fields/Scheduled_Campaign_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Campaign_Completion_Date__c</fullName>
    <label>Scheduled Campaign Completion Date</label>
    <type>Date</type>
</CustomField>