unpackaged/main/default/objects/Request_Forms__c/fields/Scheduled_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Completed_Date__c</fullName>
    <label>Scheduled Completed Date</label>
    <type>Date</type>
</CustomField>