unpackaged/main/default/objects/Request_Forms__c/fields/Scheduled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End_Date__c</fullName>
    <description>Date the Campaign is to end/complete</description>
    <inlineHelpText>Date the Campaign is to end/complete</inlineHelpText>
    <label>Scheduled End Date</label>
    <type>Date</type>
</CustomField>