unpackaged/main/default/objects/Request_Forms__c/fields/Scheduled_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Launch_Date__c</fullName>
    <label>Scheduled Launch Date</label>
    <type>Date</type>
</CustomField>