unpackaged/main/default/objects/Request_Forms__c/fields/Scheduled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Date__c</fullName>
    <label>Scheduled Start Date</label>
    <type>Date</type>
</CustomField>