unpackaged/main/default/objects/Request_Forms__c/fields/Specific_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Specific_Start_Time__c</fullName>
    <label>Specific Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6:00 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>8:00 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM</fullName>
            </value>
            <value>
                <fullName>4:00 PM</fullName>
            </value>
            <value>
                <fullName>5:00 PM</fullName>
            </value>
            <value>
                <fullName>6:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>