unpackaged/main/default/objects/Request_Forms__c/fields/Tactics_Assistance_Other_explain__c.field-meta.xml
<CustomField>
    <fullName>Tactics_Assistance_Other_explain__c</fullName>
    <inlineHelpText>Please give a description of the tactic or assistance that wasn&#39;t listed above. Thank You.</inlineHelpText>
    <label>Tactics / Assistance Other (explain)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>